LPS-40758 License check over proxy using Apache HttpClient 4.2